Uploaded Video Background

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div id="app">
         <div id="links">
             <a aria-label="GitHub" href="https://github.com/Saarujan-Sathees" class="iconURL">
-                <img height="25" width="25" class="icon" src="Media/GitHub Logo.png" alt="GitHub Profile">
+                <img height="25" width="25" class="icon" data-src="Media/GitHub Logo.png" alt="GitHub Profile">
             </a>
             <a aria-label="LinkedIn" href="https://www.linkedin.com/in/saarujan-sathees-3297362b5/" class="iconURL">
-                <img height="25" width="25" class="icon" src="Media/LinkedIn Logo.png" alt="LinkedIn Profile">
+                <img height="25" width="25" class="icon" data-src="Media/LinkedIn Logo.png" alt="LinkedIn Profile">
             </a>
             <a aria-label="Email" href="mailto:saarujan.phone@gmail.com" class="iconURL">
-                <img height="25" width="25" class="icon" src="Media/Gmail Logo.png" alt="Email">
+                <img height="25" width="25" class="icon" data-src="Media/Gmail Logo.png" alt="Email">
             </a>
         </div>
         <header id="logo" style="transform: scale(0.01) !important; animation: none !important;">
@@ -36,7 +36,7 @@
         <div id="content">
             <section id="aboutScroller">
                 <video muted preload="auto" class="videoBackground" id="aboutVideo">
-                    <source src="Media/Space Background.mp4" type="video/mp4;">
+                    <source data-src="Media/Space Background.mp4" type="video/mp4;">
                 </video>
                 <div class="stickyContainer" id="about">
                     <pre class="heading">A B O U T</pre>
