Added Roadmap Animation

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 </p>
             </section>
             <section id="projectsScroller">
-                <div class="stickyContainer" id="projects">
-                </div>
+                <div class="stickyContainer" id="projects"></div>
+                <div id="projectRoadmap"></div>
             </section>
         </div>
     </div>
