--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                 </p>
             </section>
             <section id="projectsScroller">
-                <div class="stickyContainer" id="projects"></div>
-                <div id="projectRoadmap"></div>
+                <div class="stickyContainer" id="projects">
+                    <div id="projectRoadmap"></div>
+                </div>
             </section>
         </div>
     </div>
