Update Roadmap Animation

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </section>
             <section id="projectsScroller">
                 <div class="stickyContainer" id="projects">
+                    <pre id="projectRoadmapPoint">O</pre>
                     <div id="projectRoadmap"></div>
                 </div>
             </section>
