Updated Roadmap Animation

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
             </section>
             <section id="projectsScroller">
                 <div class="stickyContainer" id="projects">
-                    <pre id="projectRoadmapPoint">O</pre>
-                    <div id="projectRoadmap"></div>
+                    <div id="projectRoadmap">
+                        <pre id="projectRoadmapPoint">o</pre>
+                    </div>
                 </div>
             </section>
         </div>
