Added Projects Heading

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </section>
             <section id="projectsScroller">
                 <div class="stickyContainer" id="projects">
+                    <pre id="projectsTitle">PROJECTS</pre>
                     <div id="projectRoadmap">
                         <pre id="projectRoadmapPoint">o</pre>
                     </div>
