--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 </div>
             </section>
         </div>
+        <footer>
+            
+        </footer>
     </div>
 </body>
 </html>
