--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 </div>
             </section>
         </div>
-        <footer>
-            
+        <footer id="footer">
+
         </footer>
     </div>
 </body>
