--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
             </section>
         </div>
         <footer id="footer">
-
-        </footer>
+            <pre class="heading">R E S U M E</pre>
+            <embed id="resume" src="https://drive.google.com/file/d/14Wo6Dm9EhNlMhBvdfG3fIlODFQ6h4q_k/view"
+                   type="application/pdf" frameBorder="0" scrolling="auto" height="100%" width="100%"></embed>
+        </footer>  
     </div>
 </body>
 </html>
