--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <pre class="heading">R E S U M E</pre>
         </footer>  
     </div>
-    <embed id="resume" src="https://drive.google.com/file/d/14Wo6Dm9EhNlMhBvdfG3fIlODFQ6h4q_k/preview"
-           type="application/pdf" frameBorder="0" scrolling="auto" height="100%" width="100%"></embed>
+    <iframe id="resume" src="https://drive.google.com/file/d/14Wo6Dm9EhNlMhBvdfG3fIlODFQ6h4q_k/preview"
+           type="application/pdf" frameBorder="0" scrolling="auto" height="100%" width="100%"></iframe>
 </body>
 </html>
