Added Resume Preview

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
         <footer id="footer">
             <pre class="heading">R E S U M E</pre>
+            <a id="resume" href="https://drive.google.com/file/d/14Wo6Dm9EhNlMhBvdfG3fIlODFQ6h4q_k/view"></a>
         </footer>  
     </div>
 </body>
