Added Resume Styling

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <footer id="footer">
             <pre class="heading">R E S U M E</pre>
             <a class="resumeContainer">
-                <img id="resume" class="resumeContainer" crossorigin="anonymous">
+                <img id="resume" crossorigin="anonymous">
             </a>
         </footer>  
     </div>
