--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <footer id="footer">
             <pre class="heading">R E S U M E</pre>
-            <a class="resumeContainer">
+            <a class="resumeContainer" href="https://drive.google.com/file/d/14Wo6Dm9EhNlMhBvdfG3fIlODFQ6h4q_k/view">
                 <img id="resume" crossorigin="anonymous">
             </a>
         </footer>  
