--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </div>
         <footer id="footer">
             <pre class="heading">R E S U M E</pre>
-            <a class="resumeContainer" href="https://drive.google.com/file/d/14Wo6Dm9EhNlMhBvdfG3fIlODFQ6h4q_k/view">
-                <img id="resume" crossorigin="anonymous">
+            <a aria-label="Resume" class="resumeContainer" href="https://drive.google.com/file/d/14Wo6Dm9EhNlMhBvdfG3fIlODFQ6h4q_k/view">
+                <img id="resume" crossorigin="anonymous" alt="Resume">
             </a>
         </footer>  
     </div>
