--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Saarujan Sathees</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Saarujan Sathees - A first year CS student at the University of Waterloo pursuing opportunities in computer graphics, design, and more.">
+    <link rel="shortcut icon" type="image/png" href="Media/Favicon.ico">
     <link preconnect rel="stylesheet" href="stylesheet.css">
     <script src="app.js"></script>
 </head> 
