Updated Resume and About Me

--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
                 </div>
                 <p class="highlightedParagraph" id="aboutText">
                     <span>Hey! I'm Saarujan Sathees, </span>
-                    <span>an incoming Computer Science student </span>
+                    <span>a first-year Computer Science student </span>
                     <span>at the University of Waterloo. </span>
                     <span>While my current interests are computer graphics and design, </span>
                     <span>I am open to explore new fields and broaden my experience. </span>
                     <span>I love reverse-engineering features and programs </span>
-                    <span>to understand how everyday tech works. </span>
+                    <span>to understand how everyday tech works! </span>
+                    <span>Feel free to contact me through LinkedIn or email!</span>
                 </p>
             </section>
             <section id="projectsScroller">
@@ -63,7 +64,7 @@
         </div>
         <footer id="footer">
             <pre class="heading">R E S U M E</pre>
-            <a aria-label="Resume" class="resumeContainer" href="https://drive.google.com/file/d/14Wo6Dm9EhNlMhBvdfG3fIlODFQ6h4q_k/view">
+            <a aria-label="Resume" class="resumeContainer" href="https://drive.google.com/file/d/1F8pWISWmKct3XpZLAE_KgapdF0DmOyOG/view?usp=sharing">
                 <img id="resume" crossorigin="anonymous" alt="Resume">
             </a>
         </footer>  
