Fixed Resume Preview

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <footer id="footer">
             <pre class="heading">R E S U M E</pre>
-            <a aria-label="Resume"  class="resumeContainer" href="https://drive.google.com/file/d/1F8pWISWmKct3XpZLAE_KgapdF0DmOyOG/view">
+            <a aria-label="Resume"  id="resumeContainer" href="https://drive.google.com/file/d/1F8pWISWmKct3XpZLAE_KgapdF0DmOyOG/view">
                 <img id="resume" crossorigin="anonymous" alt="Resume">
             </a>
         </footer>  
