--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a aria-label="LinkedIn" href="https://www.linkedin.com/in/saarujan-sathees-3297362b5/" class="iconURL">
                 <img height="25" width="25" class="icon" data-src="Media/LinkedIn Logo.png" alt="LinkedIn Profile">
             </a>
-            <a aria-label="Email" href="mailto:saarujan.phone@gmail.com" class="iconURL">
+            <a aria-label="Email" href="mailto:saarujan.sathees@uwaterloo.ca" class="iconURL">
                 <img height="25" width="25" class="icon" data-src="Media/Gmail Logo.png" alt="Email">
             </a>
         </div>
