--- a/index.html
+++ b/index.html
@@ -23,16 +23,15 @@
                 <img height="25" width="25" class="icon" data-src="Media/Gmail Logo.png" alt="Email">
             </a>
         </div>
-        <header id="logo" style="transform: scale(0.01) !important; animation: none !important;">
-            <pre id="title"></pre>
-            <div id="eclipse">
-                <div class="rayOne ray"></div>
-                <div class="rayTwo ray"></div>
-                <div class="rayThree ray"></div>
-                <div class="rayMask"></div>
-                <div id="moon"></div>
-            </div>
-        </header>
+        <header id="logo" style="animation: 4000ms normal both 1 startAnimation cubic-bezier(0.3, 0.01, 0, 0.99) !important"></header>
+        <div id="eclipse" style="animation: 4000ms normal both 1 startAnimation cubic-bezier(0.3, 0.01, 0, 0.99) !important; transform-origin: center;">
+            <div class="rayOne ray"></div>
+            <div class="rayTwo ray"></div>
+            <div class="rayThree ray"></div>
+            <div class="rayMask"></div>
+            <div id="moon"></div>
+        </div>
+        <pre id="title" style="animation: 4000ms normal both 1 startAnimation cubic-bezier(0.3, 0.01, 0, 0.99) !important;"></pre>
         <div class="fill"></div>
         <div id="content">
             <section id="aboutScroller">
