Added Support for Mobile Devices

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <source data-src="Media/Space Background.mp4" type="video/mp4;">
                 </video>
                 <div class="stickyContainer" id="about">
-                    <pre class="heading">A B O U T</pre>
+                    <pre class="heading" id="aboutHeading">A B O U T</pre>
                 </div>
                 <p class="highlightedParagraph" id="aboutText">
                     <span>Hey! I'm Saarujan Sathees, </span>
@@ -62,8 +62,8 @@
             </section>
         </div>
         <footer id="footer">
-            <pre class="heading">R E S U M E</pre>
-            <a aria-label="Resume"  id="resumeContainer" href="https://drive.google.com/file/d/1ldQPAWgKfN9pfrQ10128Em6pNopiVKxt/view">
+            <pre class="heading" id="resumeHeading">R E S U M E</pre>
+            <a aria-label="Resume" id="resumeContainer" href="https://drive.google.com/file/d/1ldQPAWgKfN9pfrQ10128Em6pNopiVKxt/view">
                 <img id="resume" crossorigin="anonymous" alt="Resume">
             </a>
         </footer>  
